--- a/.github/workflows/new.yml
+++ b/.github/workflows/new.yml
@@ -26,6 +26,10 @@ jobs:
       uses: hashicorp/setup-terraform@v2.0.3
       with:
          terraform_version: latest
+    - name: check terraform version 
+      run: terraform -version
+      
+      
           
               
         
