--- a/.github/workflows/new.yml
+++ b/.github/workflows/new.yml
@@ -12,6 +12,8 @@ jobs:
     name: new job
     runs-on: ubuntu-latest
     steps: 
+    - name: Checkout code
+      uses: actions/checkout@v4   
     - name: Azure Login
       uses: Azure/login@v2.3.0
       with:
