--- a/.github/workflows/new.yml
+++ b/.github/workflows/new.yml
@@ -31,13 +31,13 @@ jobs:
     - name: check terraform version 
       run: terraform -version
     - name: terraform init
-      run: terraform init
+      run: terraform -chdir=Module init
     - name: terraform ormating
-      run: terraform fmt
+      run: terraform -chdir=Module fmt
     - name: terraform validation
-      run: terraform validate
+      run: terraform -chdir=Module validate
     - name: terraform planing
-      run: terraform plan
+      run: terraform -chdir=Module plan
       
       
           
